breadcrumb on mobile issue

--- a/assets/collection-shop-by-brands.css
+++ b/assets/collection-shop-by-brands.css
@@ -684,3 +684,30 @@
     visibility: hidden;
     height: 0;
 }
+
+.page__sub-header{
+    display: block !important;
+    margin: 23px 20px !important;
+}
+
+.breadcrumb__list{
+    font-family: poppins;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+@media(min-width: 768px){
+    .page__sub-header{
+        margin: 23px 0px !important;
+    }
+    .breadcrumb__list{
+        font-family: poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.2;
+    }
+    .breadcrumb__link[aria-current="page"]{
+        font-weight: 600;
+    }
+}
