--- a/assets/shop-by-brands.css
+++ b/assets/shop-by-brands.css
@@ -267,3 +267,27 @@
 .product-list::before {
   border: none !important;
 }
+
+.page__sub-header{
+    display: block;
+    margin: 23px 0;
+}
+
+.breadcrumb__list{
+    font-family: poppins;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+@media(min-width: 768px){
+    .breadcrumb__list{
+        font-family: poppins;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.2;
+    }
+    .breadcrumb__link[aria-current="page"]{
+        font-weight: 600;
+    }
+}
